--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,18 @@
-/* Style rules for navigation area */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+a {
+    text-decoration: none;
+}
+
+ul {
+    list-style: none;
+}
+
+.header{
+    width: 100%;
+    
+}
