Finished Main element and placed template
I added css to the main element and pasted it onto the template. I also pasted the template onto the rest of the pages

--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,20 @@ nav a:hover {
     background-color: #e7ece7;
 }
 
+/*Main Section*/
+main {
+    background-color: #D4C9A8;
+    text-decoration-color: #F2E8D4;
+}
+
+h1 {
+    font-size: larger;
+}
+
+paragraph {
+    font-size: small;
+}
+
 /* Footer Section */
 footer {
     background-color: #5e785e;
