--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,13 @@ main {
     font-size: 1rem;
 }
 
+/*Forms section*/
+.form {
+    margin-left: auto;
+    margin-right: auto;
+    width:50%;
+}
+
 /* Footer Section */
 footer {
     background-color: #5e785e;
