Played with SEO
Added favicon to template and added that to the headers (not sure if it did much, I'm trying to see if it improves SEO score). I also added a meta description to each of the pages. I cleaned up the alt text in the footer and on the services and contact page

--- a/styles.css
+++ b/styles.css
@@ -532,6 +532,7 @@ td p {
 
 .greenTable {
     color: #000000;
+    width: 6rem;
 }
 
 .header-bg {
@@ -540,6 +541,7 @@ td p {
 
 .cell-bg {
     background-color: #5e785e;
+    width: 2rem;
 }
 
 .cards {
